# diagrams-ghcjs

./: .gitignore  LICENSE  README.md  default.nix  diagrams-ghcjs.cabal  shell.nix  stack.yaml
src/Diagrams/Backend/: GHCJS.hs
src/Graphics/Rendering/: GHCJS.hs
test/: Main.hs  Makefile  Tests.hs  default.nix  shell.nix  test.html
