Name:                diagrams-ghcjs
Version:             0.3.0
Synopsis:            GHCJS backend for diagrams drawing EDSL
Description:         This package provides a backend for rendering
                     diagrams directly to an HTML 5 canvas
                     from JavaScript
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Author:              Andy Gill, Ryan Yates, Luite Stegeman, Daniil Frumin
Copyright:           (c) 2012 Ryan Yates, Andy Gill, (c) 2013 Luite Stegeman, Daniil Frumin
Maintainer:          stegeman@gmail.com
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.8
Source-repository head
  type:     git
  location: https://github.com/ghcjs/diagrams-ghcjs.git

Library
  Exposed-modules:     Diagrams.Backend.GHCJS
                       Graphics.Rendering.GHCJS
  Hs-source-dirs:      src
  Build-depends:       base >= 4.7 && < 4.9,
                       mtl >= 2.0 && < 3.0,
                       NumInstances >= 1.2 && < 1.5,
                       diagrams-core >= 1.3 && < 1.4,
                       lens >= 4.0 && < 4.13,
                       diagrams-lib >= 1.3 && < 1.4,
                       containers >= 0.3 && < 0.6,
                       linear >=1.11.3 && <1.20,
                       colour >= 2.3 && < 2.4,
                       text >= 0.11 && < 1.3,
                       ghcjs-base

executable tests
  main-is: Main.hs
  other-modules: Tests
  hs-source-dirs: test
  build-depends: base >= 4.2 && < 4.9
               , diagrams-lib
               , diagrams-core
               , text
               , mtl
               , diagrams-ghcjs
               , ghcjs-base
               , ghcjs-jquery
  default-language:    Haskell2010
